Sliced users toolbar with sorting switcher via action

--- a/App/Components/Pages/Users/Header.module.sass
+++ b/App/Components/Pages/Users/Header.module.sass
@@ -12,7 +12,7 @@ $class: header
 		width: 100%
 		display: flex
 		margin: auto
-		justify-content: space-around
+		justify-content: space-between
 		align-items: center
 
 	&__title
@@ -49,4 +49,4 @@ $class: header
 	&__btn-icon
 		+size(18px)
 		margin: 0 0 0 11px
-		background: url(./resources/plus.svg)
+		background: url(./resources/plus.svg) no-repeat 50% / contain
