--- a/App/Global/Styles/variables.sass
+++ b/App/Global/Styles/variables.sass
@@ -1,6 +1,7 @@
 $blue-color: #123FDD
 $dark-blue-color: #112A85
 $black-color: #333
+$dark-gray-color: #5D606C
 
 $max-width: 1440px
 $font-roboto: 'Inter', Aria, Helvetica, sans-serif
