--- a/App/Components/Pages/Users/Header.module.sass
+++ b/App/Components/Pages/Users/Header.module.sass
@@ -29,7 +29,7 @@ $class: header
 		padding: 0 14px
 		height: 44px
 		background: #E4E6EF
-		border-radius: 8px
+		border-radius: $border-radius
 		cursor: pointer
 		text-decoration: none
 		text-transform: uppercase
