Made UXConfirm and implement delete users

--- a/App/Components/Pages/Users/Users.module.sass
+++ b/App/Components/Pages/Users/Users.module.sass
@@ -7,6 +7,13 @@ $class: users
 		max-width: $max-width
 		margin: auto
 
+	&__empty
+		display: flex
+		justify-content: space-between
+		align-items: center
+		height: 106px
+		font-size: 16px
+
 	// Тулбар
 	&__toolbar
 		display: flex
