--- a/App/Components/Pages/Users/Users.module.sass
+++ b/App/Components/Pages/Users/Users.module.sass
@@ -148,3 +148,8 @@ $class: users
 
 			&:hover
 				background-image: url(./resources/delete-blue.svg)
+
+@media screen and (max-width: $max-width)
+	.#{$class}
+		&__inner
+			margin: 0 20px
