--- a/App/Components/UX/Confirm/Confirm.module.sass
+++ b/App/Components/UX/Confirm/Confirm.module.sass
@@ -1,6 +1,8 @@
 @import "../../../Global/Styles/global"
 
-.confirm
+$class: confirm
+
+.#{$class}
 	+position(fixed, 0)
 	display: flex
 	align-items: center
@@ -109,41 +111,3 @@
 	&__overlay
 		position: absolute
 		z-index: 1
-
-	&__btn
-		margin: 0 0 0 10px
-		position: relative
-		top: 0
-		display: flex
-		justify-content: center
-		align-items: center
-		padding: 0 14px
-		width: 100%
-		height: 100%
-		background: #E4E6EF
-		border-radius: $border-radius
-		cursor: pointer
-		text-decoration: none
-		text-transform: uppercase
-		color: $blue-color
-		font-size: 12px
-		font-weight: 600
-		transition: .3s background
-		user-select: none
-
-		&._primary
-			background: $blue-color
-			color: #fff
-
-			&:hover
-				background: $dark-blue-color
-
-		&:first-child
-			margin: 0
-
-		&:hover
-			background: #dee0e9
-
-		&:active
-			top: 1px
-			background: #dcdde3
