Made modalBox and replaced instead of Confirm with ConfirmDialog, upgraded to React 16

--- a/App/Components/Pages/Users/Users.module.sass
+++ b/App/Components/Pages/Users/Users.module.sass
@@ -39,7 +39,7 @@ $class: users
 	&__toolbar-sort-icon
 		display: flex
 		margin: 0 0 0 9px
-		+size(8px 18px)
+		+size(8px, 18px)
 		transition: .1s transform
 		background: url("./resources/arrow.svg") no-repeat 50% / contain
 
