--- a/App/Global/Styles/global.sass
+++ b/App/Global/Styles/global.sass
@@ -1,6 +1,6 @@
 @import url(//fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap)
 
-@import '~bourbon/app/assets/stylesheets/bourbon'
+@import '~bourbon/core/bourbon'
 @import "./variables"
 
 .page
