Made adding users and new UX controls

--- a/App/Components/UX/Button/Button.module.sass
+++ b/App/Components/UX/Button/Button.module.sass
@@ -22,6 +22,11 @@ $class: btn
 	user-select: none
 	box-sizing: border-box
 
+	&._disabled
+		opacity: .3
+		cursor: default
+		pointer-events: none
+
 	&._full-width
 		width: 100%
 
