--- a/App/Global/Styles/global.sass
+++ b/App/Global/Styles/global.sass
@@ -6,7 +6,7 @@
 .page
 	margin: 0
 	padding: 0
-	font-family: $font-roboto
+	font-family: $font-inter
 	color: $black-color
 	font-size: 14px
 	background: #fff
