--- a/App/Global/Styles/variables.sass
+++ b/App/Global/Styles/variables.sass
@@ -4,5 +4,5 @@ $black-color: #333
 $dark-gray-color: #5D606C
 
 $max-width: 1440px
-$font-roboto: 'Inter', Aria, Helvetica, sans-serif
+$font-inter: 'Inter', Aria, Helvetica, sans-serif
 $border-radius: 8px
